# respo

./: .gitignore  404.html  HISTORY.md  LICENSE  README.md  file.yml  index.html  mkdocs.yml  objects.inv  pre-push.sh  pyproject.toml  requirements-dev.txt  requirements.txt  resource_policy.yml  respo_model.py  sitemap.xml
.github/.workflows/: publish.yml
.github/workflows/: gh-pages.yml  publish.yml  tests.yml
Install/: index.html
User_Guide/: index.html
changelog/: index.html
docs/: Install.md  index.md  install.md
docs/User_Guide/: index.md
docs/examples/index/: 003_respo_model.py  004_respo_client.py  index001.py  index002.py  index002_cli.sh  respo-example.yml  respo-tutorial.yml  respo_cli.sh  respo_client_example.py  respo_example.yml  respo_model.py
docs/examples/usage/: general_perms.yml  general_principles.yml  general_roles.yml  main.py  main_roles.py  respo_model.py  respo_model_in_fastapi.py  user_have_permission_I.py  user_have_permission_II.py
docs/reference/: cli.md  client.md  core.md  exceptions.md  fields.django.md  fields.sqlalchemy.md  settings.md
docs/usage/: declaring_roles_and_permissions.md  environment_variables.md  get_respo_model.md  respo_create_cli.md  use_respo_model_in_fastapi.md  user_have_permission.md  user_have_permission_I.md  user_have_permission_II.md
examples/usage/: general_principles.yml  main_roles.py  user_have_permission_I.py
install/: index.html
reference/cli/: index.html
reference/client/: index.html
reference/core/: index.html
reference/exceptions/: index.html
reference/fields.django/: index.html
reference/fields.sqlalchemy/: index.html
reference/settings/: index.html
respo/: __init__.py  bin.py  cli.py  cli_utils.py  client.py  config.py  core.py  exceptions.py  helpers.py  resource_model.py  resource_policy.py  respo_model.py  save.py  settings.py  typer.py  typer_utils.py
respo/fields/: django.py  sqlalchemy.py
search/: search_index.json
tests/: conftest.py  my_resource_policy.yml  test_bin.py  test_case_all_invalid.py  test_case_all_valid.py  test_case_general.py  test_cases.py  test_cli.py  test_cli_utils.py  test_client.py  test_core.py  test_helpers.py  test_resource_policy.py  test_respo_model.py  test_save.py  test_typer.py  test_typer_utils.py  test_version.py  utils.py
tests/cases/: click_out_general.py  click_out_minimal_valid.py  click_out_minimal_valid_roles.py  general.json  general.yml  typer_out_general.py  typer_out_minimal_valid.py  typer_out_minimal_valid_roles.py
tests/cases/invalid/: metadata_api_version.yml  metadata_created_at.yml  not_match_regex_1.yml  organization_permissions_label2.yml  organization_permissions_type.yml  organizations_metadata_label1.yml  organizations_metadata_label2.yml  organizations_metadata_same.yml  organizations_permissions_label1.yml  permission_regex.yml  permission_rules_then_all.yml  permission_rules_when_all.yml  permissions_duplicated.yml  permissions_metadata_label1.yml  permissions_metadata_label2.yml  permissions_metadata_same.yml  permissions_resources_label1.yml  permissions_resources_label2.yml  permissions_resources_label3.yml  permissions_resources_label4.yml  permissions_resources_label5.yml  permissions_resources_label_all.yml  permissions_rules_then.yml  permissions_rules_then_triple.yml  permissions_rules_when.yml  permissions_rules_when2.yml  principles_then_duplicated.yml  principles_then_not_in_permissions.yml  principles_then_regex.yml  principles_when_duplicated.yml  principles_when_not_in_permission.yml  principles_when_regex.yml  role_permissions_duplicated.yml  role_permissions_label.yml  roles_include_not_in_roles.yml  roles_include_self_reffering_two_roles.yml  roles_metadata_label1.yml  roles_metadata_label2.yml  roles_metadata_label3.yml  roles_metadata_no_organization.yml  (+14 more)
tests/cases/other/: invalid_json  invalid_yml
tests/cases/valid/: lots_of_nested_rules_for_organization.yml  metadata_created_at.yml  minimal_valid.yml  minimal_valid_roles.yml  small_valid_roles.yml  small_valid_with_all.yml
tests/test_django_field/: manage.py
tests/test_django_field/respo_field_test/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_django_field/some_app/: apps.py  models.py  test_django_respo_field.py
tests/test_django_field/some_app/migrations/: 0001_initial.py
tests/test_docs/: test_index.py  test_usage.py
tests/test_sqlalchemy_field/: test_sqlalchemy_respo_field.py
usage/declaring_roles_and_permissions/: index.html
usage/environment_variables/: index.html
usage/get_respo_model/: index.html
usage/respo_create_cli/: index.html
usage/user_have_permission/: index.html
