[tool.poetry]
name = "respo"
version = "0.1.3"
description = "File based RBAC in Python made easy"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rafsaf/respo"
documentation = "https://respo.rafsaf.pl"
repository = "https://github.com/rafsaf/respo"
authors = ["rafsaf <rafal.safin@rafsaf.pl>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
PyYAML = "^6.0"
typer = "^0.4.0"
colorama = "^0.4.4"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
isort = "^5.10.1"
black = "^22.1.0"
mkdocs-material = "^8.2.5"
pymdown-extensions = "^9.2"
markdown-include = "^0.6.0"
flake8 = "^4.0.1"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
requests = "^2.27.1"
autoflake = "^1.4"

[tool.coverage.run]
source = [
    "respo",
    "docs"
]
omit = [
    "**__init__.py**"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"


[tool.poetry.scripts]
respo = "respo.typer:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

