[tool.poetry]
authors = ["rafsaf <rafal.safin@rafsaf.pl>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]
description = "File based RBAC in Python made easy"
documentation = "https://respo.rafsaf.pl"
homepage = "https://github.com/rafsaf/respo"
license = "MIT"
name = "respo"
readme = "README.md"
repository = "https://github.com/rafsaf/respo"
version = "0.2.0"

[tool.poetry.dependencies]
pydantic = "^1.7.0"
python = "^3.7"
ujson = "^5.0"

PyYAML = {version = "^6.0", optional = true}
SQLAlchemy = {version = "^1.4", optional = true}
django = {version = "^3.0", optional = true}
click = "^8.0.0"

[tool.poetry.extras]
all = ["django", "PyYAML", "SQLAlchemy", "click"]
cli = ["PyYAML", "click"]
django = ["django"]
sqlalchemy = ["SQLAlchemy"]

[tool.poetry.dev-dependencies]
PyYAML = "^6.0"
SQLAlchemy = "^1.4"
autoflake = "^1.4"
black = "^22.1.0"
colorama = "^0.4"
coverage = {extras = ["toml"], version = "^6.3.2"}
django = "^3.0"
fastapi = "^0.75.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
markdown-include = "^0.6.0"
mkdocs-material = "^8.2.5"
pymdown-extensions = "^9.2"
pytest = "^7.0.1"
pytest-django = "^4.5.2"
requests = "^2.27.1"
typer = "^0.4"
uvicorn = "^0.17.5"
toml = "^0.10.2"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.18.2"
types-toml = "^0.10.4"
types-ujson = "^4.2.1"
mypy = "^0.931"

[tool.coverage.run]
omit = [
  "**__init__.py**",
]
source = [
  "respo",
  "docs",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_django_field.respo_field_test.settings"
asyncio_mode="auto"
addopts = "-v"
minversion = "6.0"

[tool.poetry.scripts]
respo = "respo.typer:app"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
