[tool.poetry]
authors = ["rafsaf <rafal.safin@rafsaf.pl>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]
description = "File based RBAC in Python made easy."
documentation = "https://respo.rafsaf.pl"
homepage = "https://github.com/rafsaf/respo"
license = "MIT"
name = "respo"
readme = "README.md"
repository = "https://github.com/rafsaf/respo"
version = "1.0.0"

[tool.poetry.dependencies]
pydantic = ">=1.7.0"
python = "^3.8"

PyYAML = {version = ">=5.0", optional = true}
SQLAlchemy = {version = ">=1.4.3", optional = true}
click = {version = ">=6.0.0", optional = true}
django = {version = ">=3.1", optional = true}

[tool.poetry.extras]
all = ["django", "PyYAML", "SQLAlchemy", "click"]
cli = ["PyYAML", "click"]
django = ["django"]
sqlalchemy = ["SQLAlchemy"]

[tool.poetry.dev-dependencies]
PyYAML = ">=5.0"
SQLAlchemy = ">=1.4.3"
aiosqlite = "^0.17.0"
autoflake = "^1.4"
black = "^22.1.0"
click = ">=6.0.0"
colorama = "^0.4"
coverage = {extras = ["toml"], version = "^6.3.2"}
django = ">=3.0"
django-stubs = "^1.9.0"
fastapi = "^0.90.0"
flake8 = "^4.0"
httpx = "^0.23.0"
isort = "^5.10.1"
markdown-include = "^0.6.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.5"
mkdocstrings = {extras = ["python"], version = "^0.18.1"}
mypy = "^0.960"
pymdown-extensions = "^9.2"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.2"
pytest-django = "^4.5.2"
requests = "^2.27.1"
sqlalchemy2-stubs = "^0.0.2-alpha.20"
toml = "^0.10.2"
types-toml = "^0.10.4"
types-ujson = "^4.2.1"
uvicorn = "^0.17.5"

[tool.coverage.run]
omit = [
  "**__init__.py**",
  "docs/examples/index/respo_model.py",
  "docs/examples/usage/respo_model.py",
  "docs/examples/usage/user_have_permission_II.py",
]
source = [
  "respo",
  "docs",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_django_field.respo_field_test.settings"
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"

[tool.poetry.scripts]
respo = "respo.cli:app"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
